# device

./: settings.gradle
app/: build.gradle
app/release/: app-release.apk
app/src/androidTest/java/me/zhj/device/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
app/src/main/java/me/zhj/device/: MainActivity.java
app/src/test/java/me/zhj/device/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
